@@ -84,6 +84,7 @@ CFLAGS-tst-printfsz.c = -Wno-format
 CFLAGS-tmpfile.c = -fexceptions
 CFLAGS-tmpfile64.c = -fexceptions
 CFLAGS-tempname.c = -fexceptions
+CFLAGS-psignal.c = -fexceptions
 
 tst-sscanf-ENV = LOCPATH=$(common-objpfx)localedata
 tst-swprintf-ENV = LOCPATH=$(common-objpfx)localedata
